# GGL

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.md  TODO.txt  autogen.sh  configure.ac  ggl.pc.in
data/: Makefile.am
data/aromModel/: Makefile.am  README.txt
data/groups/: ADP.gml  CONH2.gml  Ribo-ADP.gml
data/kegg/: Makefile.am  README.txt
misc/: .gitignore  Makefile.am
misc/doxygen/: Makefile.am  doxygen.config  header.html  stylesheet.css
misc/jankowski-tool/: license_GCM.docx
misc/literature/: Jankowski-2008-supp2-ext.csv  Jankowski-2008-supp2.xls  Makefile.am
misc/logo/: GGL-logo.eps  GGL-logo.xcf  Makefile.am
misc/m4/: m4_ax_prog_doxygen.m4
misc/manual/: .cvsignore  Makefile.am  def-include.tex  faq.tex.in  gml-include.tex  mhchem.sty  (+3 more)
perl/: Makefile.am  chemrule2svg.pl  gml2dot.pl  molcomp2svg.pl  printReactionNetwork.pl
perl/Chemistry-GGL/: Changes  GGL.xs  MANIFEST  Makefile.PL  README
perl/Chemistry-GGL/lib/Chemistry/: GGL.pm
perl/Chemistry-GGL/t/: 00-load.t  10-apply_rules.t  11-canonical.t
perl/Chemistry-GGL/t/10-apply_rules/: 01simple.test  02aromaticity.test  03symmetry.test
src/: .gitignore  Makefile.am  doxygen.hh.in
src/ggl/: DFS_ApplyRule.cc  DFS_ApplyRule.hh  DFS_ApplyRule.icc  GS_STL.hh  GS_STL.icc  GS_stream.cc  GS_stream.hh  GS_stream.icc  Graph.cc  Graph.hh  Graph_GML_grammar.hh  Graph_GML_grammar.icc  Graph_GML_writer.cc  Graph_GML_writer.hh  Graph_GML_writer.icc  Graph_GMLparser.cc  Graph_GMLparser.hh  Graph_GXL_writer.cc  Graph_GXL_writer.hh  Graph_GXL_writer.icc  Graph_Storage.hh  Graph_gSpan_writer.cc  Graph_gSpan_writer.hh  MR_ApplyRule.cc  MR_ApplyRule.hh  MR_ApplyRule.icc  MR_ApplyRule_NodeLabelPrefix.hh  MR_ApplyRule_NodeLabelPrefix.icc  Makefile.am  Rule.cc  Rule.hh  Rule.icc  RuleGraph.cc  RuleGraph.hh  RuleGraph.icc  Rule_GML_error.hh  Rule_GML_grammar.hh  Rule_GML_grammar.icc  Rule_GML_writer.cc  Rule_GML_writer.hh  (+3 more)
src/ggl/chem/: AP_NSPDK.cc  AP_NSPDK.hh  AP_NSPDK.icc  AP_NSPDK_Model.cc  AP_NSPDK_Model.hh  AP_NSPDK_Model_Marvin_general_2013.cc  AP_NSPDK_Model_Marvin_general_2013.icc  AP_NSPDK_Model_OpenBabel_2013.cc  AP_NSPDK_Model_OpenBabel_2013.icc  AP_disabled.hh  AromaticityPerception.cc  AromaticityPerception.hh  AromaticityPerception.icc  ChemRule.cc  ChemRule.hh  ChemRule.icc  ChemRuleGraph.hh  ClassIDGraph.hh  EC_MoleculeDecomposition.hh  EC_MoleculeDecomposition.icc  EnergyCalculation.hh  EnergyCalculationConstants.cc  EnergyCalculationConstants.hh  GS_MolCheck.cc  GS_MolCheck.hh  GS_MolCheck.icc  GS_SMILES.hh  GS_SMILES.icc  GS_SMILES_OB.hh  GS_SMILES_OB.icc  GS_chem.cc  GS_chem.hh  GS_chem.icc  MC_MC_Node.hh  MR_Reactions.cc  MR_Reactions.hh  MR_Reactions.icc  Molecule.hh  MoleculeComponent.cc  MoleculeComponent.hh  (+34 more)
src/nspdk/: Makefile.am
src/nspdk/nspdk/: BaseGraphClass.cc  BaseGraphClass.h  FeatureGenerator.h  FlagsService.cc  FlagsService.h  GraphClass.cc  GraphClass.h  Histogram.cc  Histogram.h  NSPDK.cc  NSPDK_FeatureGenerator.cc  NSPDK_FeatureGenerator.h  NSPDK_quickcluster.cc  NSPDK_removed_stems.cc  NSPDK_weighted_edges.cc  SVector.h  Utility.h
src/sgd-1.3/: Makefile.am
src/sgd-1.3/sgd/: matrices.cpp  matrices.h  svmmodel.h  svmsgd.cpp  svmsgd.h  timer.cpp  timer.h  vectors.cpp  vectors.h  wrapper.h
src/sgm/: .Tpo  GM_vf2.cc  GM_vf2.hh  GraphMatching.hh  GraphScaffold.cc  GraphScaffold.hh  Graph_Interface.cc  Graph_Interface.hh  Graph_Interface.icc  Graph_NodeLabelPrefix.hh  Graph_boost.hh  Graph_boost.icc  Graph_boostV_p.hh  Graph_boostV_p.icc  HashMap.hh.in  MC_Edge.hh  MC_Node.hh  MR_Counting.hh  MR_Storing.hh  MR_SymmBreak.hh  MR_restoreNodeLabel.hh  MR_restoreNodeLabel.icc  MR_stream.hh  Makefile.am  Match.hh  Match_Reporter.hh  NSPDK_port.cc  NSPDK_port.hh  PA_OrderCheck.hh  PA_OrderCheck.icc  Pattern.cc  Pattern.hh  Pattern_Automorphism.hh  RP_Hanser96.cc  RP_Hanser96.hh  RingPerception.hh  RingReporter.cc  RingReporter.hh  SGM_vf2.cc  SGM_vf2.hh  (+7 more)
src/vflib2-080701/: Makefile.am
src/vflib2-080701/vf2/: allocpool.h  argedit.cc  argedit.h  argloader.cc  argloader.h  argraph.cc  argraph.h  dict.h  error.cc  error.h  gene.cc  gene.h  gene_mesh.cc  gene_mesh.h  match.cc  match.h  sd_state.cc  sd_state.h  sortnodes.cc  sortnodes.h  state.h  ull_state.cc  ull_state.h  ull_sub_state.cc  ull_sub_state.h  vf2_mono_state.cc  vf2_mono_state.h  vf2_state.cc  vf2_state.h  vf2_sub_state.cc  vf2_sub_state.h  vf_mono_state.cc  vf_mono_state.h  vf_state.cc  vf_state.h  vf_sub_state.cc  vf_sub_state.h  xsubgraph.cc  xsubgraph.h
tests/: .gitignore  Makefile.am  dataChemRule_1.icc  dataRule_1.icc  dataRule_2.icc  dataRule_3.icc  dataRule_4.icc  dataSGMgraphs_1.icc  dataSGMgraphs_2.icc  dataSGMgraphs_3.icc  dataTargetGraph_1.icc  dataTargetGraph_2.icc  dataTargetGraph_3.icc  dataTargetGraph_4.icc  testbin_aromModelNSPDK.sh  testbin_aromModelNSPDK.verified  testbin_catalan.sh  testbin_catalan.verified  testbin_gameOfLife.sh  testbin_gameOfLife.verified  testbin_hanser.sh  testbin_hanser.verified  testbin_molTool.sh  testbin_molTool.verified  testbin_sudoku.sh  testbin_sudoku.verified  testbin_toyChem.sh  testbin_toyChem.verified  testggl_CE_Horton.cc  testggl_CE_Horton.verified  testggl_GS_STL_pushAll.cc  testggl_GS_STL_pushAll.verified  testggl_GS_STL_pushAllP.cc  testggl_GS_STL_pushAllP.verified  testggl_GS_STL_pushUnique.cc  testggl_GS_STL_pushUnique.verified  testggl_GS_STL_pushUniqueP.cc  testggl_GS_STL_pushUniqueP.verified  testggl_GS_stream.cc  testggl_GS_stream.verified  (+75 more)
tests/catalan/: 2-step.input  3-step.input
tests/dielsalder/: da1.gml  da1.smi  da2.gml  da2.smi  da3.smi  da_rule.gml
tests/game-of-life/: gof.glider  gof.gun  gof.rules
tests/hanser/: cube.input  four-fused-rings.input  hanser.rules  single-loop.input  single-ring.input  three-fused-rings.input  two-fused-rings.input
tests/sudoku/: easy.input  hard.input  medium.input  very-easy.input
tests/toyChem/: NADH.smi  formose-process.rule  formose-process.smi  groups.gml  hemiacetal-formation.rule  hemiacetal-formation.smi  lactat-dehydrogenase.gml  lactat.smi  purine.smi
(+23 files in other folders)
