
#################################################
# GGL Perl interface files
#################################################

GGLPERLMODULE = \
		./Chemistry-GGL/GGL.xs \
		./Chemistry-GGL/MANIFEST \
		./Chemistry-GGL/Makefile.PL \
		./Chemistry-GGL/README \
		./Chemistry-GGL/Changes \
		./Chemistry-GGL/lib/Chemistry/GGL.pm \
		./Chemistry-GGL/t/pod.t \
		./Chemistry-GGL/t/pod-coverage.t \
		./Chemistry-GGL/t/00-load.t \
		./Chemistry-GGL/t/11-canonical.t \
		./Chemistry-GGL/t/10-apply_rules.t \
		./Chemistry-GGL/t/10-apply_rules/01simple.test \
		./Chemistry-GGL/t/10-apply_rules/02aromaticity.test \
		./Chemistry-GGL/t/10-apply_rules/03symmetry.test


#################################################
# all additional scripts
#################################################

dist_bin_SCRIPTS = \
		chemrule2svg.pl \
		molcomp2svg.pl \
		printReactionNetwork.pl \
		gml2dot.pl


					
#################################################
# list of files to be part of the package
#################################################

EXTRA_DIST =	$(GGLPERLMODULE)
