
#################################################################
# SOURCE DATA FOR THE TRAINING OF THE AROMATICITY MODELS
#################################################################


AROMATICITYMODELSOURCEFILES = \
				README.txt \
				AP_NSPDK_Model_Marvin_general_2013.zip \
				AP_NSPDK_Model_OpenBabel_2013.zip


#################################################################


EXTRA_DIST =	$(AROMATICITYMODELSOURCEFILES)


#################################################################

all:

#################################################################
