
#################################################################
# KEGG ECDB DATA
#################################################################


KEGGECDBRULEFILES = \
				README.txt \
				kegg.r58.1.v20111221.tar.gz


#################################################################


EXTRA_DIST =	$(KEGGECDBRULEFILES)


#################################################################

all:

#################################################################
