
#########  LITERATURE IMPLEMENTED WITHIN THIS PACKAGE  ###########
			
EXTRA_DIST =	\
				Bemis-1996.pdf \
				Benkoe-2001.pdf \
				Benkoe-2005.pdf \
				Hanser-1996.pdf \
				Jankowski-2008.pdf \
				Weininger-1989-1.pdf \
				Weininger-1989-2.pdf

##################################################################
